# nerd-fonts-icons-hs

./: CHANGELOG.md  LICENSE  README.md  nerd-font-icons.cabal
lib/Graphics/Icons/: NerdFont.hs
scripts/: generate.sh
