cabal-version:      3.0
name:               nerd-font-icons
version:            0.1.0.0
synopsis:           Nerd Font Icons for use in haskell
description:        
  The \`Graphics.Icons.NerdFont\` module simplifies using Nerd Fonts Icons in
  your Haskell source code by providing constants for the icon code points.
homepage:           https://github.com/ccntrq/nerd-fonts-icons-hs
license:            MIT
license-file:       LICENSE
author:             Alexander 'ccntrq' Pankoff
maintainer:         ccntrq@screenri.de
category:           Graphics
build-type:         Simple
extra-doc-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/ccntrq/nerd-fonts-icons-hs

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Graphics.Icons.NerdFont
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010
